--- a/MJPSlider/Base.lproj/Main.storyboard
+++ b/MJPSlider/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5023" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
@@ -15,8 +15,59 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="daw-2A-bH4" userLabel="Example 1" customClass="MJPSlider">
+                                <rect key="frame" x="20" y="80" width="280" height="40"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="bxW-9N-a7K"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="7WM-A2-QSp"/>
+                                </connections>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jW8-Ge-vBw" userLabel="Example 2" customClass="MJPSlider">
+                                <rect key="frame" x="20" y="170" width="280" height="40"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Jre-Z4-FKy"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="pEZ-Yw-fO4"/>
+                                </connections>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ylP-Ae-kVO" userLabel="Example 3" customClass="MJPSlider">
+                                <rect key="frame" x="20" y="260" width="280" height="40"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Tsa-xQ-1ss"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="vtg-Ye-xmA"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jW8-Ge-vBw" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="35O-t5-nP9"/>
+                            <constraint firstItem="daw-2A-bH4" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="HEK-DF-KCH"/>
+                            <constraint firstItem="daw-2A-bH4" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="60" id="Zqt-4h-HV8"/>
+                            <constraint firstAttribute="trailing" secondItem="daw-2A-bH4" secondAttribute="trailing" constant="20" id="eH7-Y4-N1x"/>
+                            <constraint firstItem="ylP-Ae-kVO" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="jPo-ry-Te0"/>
+                            <constraint firstItem="jW8-Ge-vBw" firstAttribute="top" secondItem="daw-2A-bH4" secondAttribute="bottom" constant="50" id="jS4-22-ZTk"/>
+                            <constraint firstAttribute="trailing" secondItem="jW8-Ge-vBw" secondAttribute="trailing" constant="20" id="tvh-uc-5Y6"/>
+                            <constraint firstAttribute="trailing" secondItem="ylP-Ae-kVO" secondAttribute="trailing" constant="20" id="ueN-Mo-8dT"/>
+                            <constraint firstItem="ylP-Ae-kVO" firstAttribute="top" secondItem="jW8-Ge-vBw" secondAttribute="bottom" constant="50" id="y6u-3T-4JE"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="example1" destination="daw-2A-bH4" id="S6s-6F-Bd2"/>
+                        <outlet property="example2" destination="jW8-Ge-vBw" id="009-5r-Xu5"/>
+                        <outlet property="example3" destination="ylP-Ae-kVO" id="pmA-Gd-mSa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
